tests/fail/escape_func_life.stderr
tests/fail/escape_func_life.tk:3:12: error[E0455]: Returning reference to local variable 'a' is unsafe
tests/fail/escape_func_life.tk:7:13: error[E0455]: Returning reference to local variable 'a' is unsafe
tests/fail/escape_func_life.tk:7:17: error[E0455]: Returning reference to local variable 'b' is unsafe
